3.0 (in development)
------------------------------------------------------------------------
- New script: Generate object JSON data from vanilla game or DAT object
- New script: Recolor any compatible PNG files with recolorable color 1
- New script: Zip all object files in the repo
- New script: Zip and install all parkobj files in the repo
- New object: Sphinx (rct2.scenery_large.sspx)
- New object: Pyramid (rct2.scenery_large.spyr)
- New object: Wooden Post Wall (couger.scenery_wall.acwwf32)
- New object: Wooden Post Wall (couger.scenery_wall.acww33)
- New object: Dinosaur (rct2.scenery_large.sdn1)
- New object: Dinosaur (rct2.scenery_large.sdn2)
- New object: Dinosaur (rct2.scenery_large.sdn3)
- New object: Vine Tree (rct2ww.scenery_small.1x1atre2)
- Fixed object: Incense Cedar Tree (rct2.scenery_small.tic)
- Fixed object: Lawson Cypress Tree (rct2.scenery_small.tlc)
- Fixed object: Monterey Cypress Tree (rct2.scenery_small.tmc)
- Fixed object: Arizona Cypress Tree (rct2.scenery_small.tac)
- Fixed object: Monkey-Puzzle Tree (rct2.scenery_small.tmp)
- Fixed object: Italian Cypress Tree (rct2.scenery_small.titc)
- Fixed object: Golden Hinoki Cypress Tree (rct2.scenery_small.tghc)
- Fixed object: Meyer's Blue Juniper Tree (rct2.scenery_small.tmbj)
- Fixed object: Cedar of Lebanon Tree (rct2.scenery_small.tcl)
- Fixed object: Bush (rct2.scenery_small.tsh0)
- Fixed object: Roman Column Wall (rct2.scenery_wall.wc3)
- Fixed object: Egyptian Statue (rct2.scenery_small.tes1)
- Fixed object: Logs (rct2.scenery_small.tml)
- Fixed object: Barrel (fidwell.scenery_small.tbr3)
- Fixed object: Barrel (fidwell.scenery_small.tbr4)
- Fixed object: Sandstone Skyscraper Walkway (rct2tt.scenery_small.futsky01)
- Updated object: Hiba Tree (rct2.scenery_small.tghc2)
- Updated object: Common Juniper Tree (rct2.scenery_small.tcj)
- Updated object: Caucasian Fir Tree (rct2.scenery_small.tcf)
- Updated object: Giraffe Statue (rct2.scenery_small.tgs)