@@ -24,6 +24,7 @@
             "rct2.scenery_wall.wallbb33",
             "$DAT:09F55A03|ACWLS33C",
             "toontowner.scenery_small.xxbbbr01",
+            "fidwell.scenery_small.xxbbbr01",
             "rct2.scenery_small.roof5",
             "rct2.scenery_small.roof7",
             "rct2.scenery_wall.wallrs32",
