@@ -4,6 +4,7 @@
 - New script: Recolor any compatible PNG files with recolorable color 1
 - New script: Zip all object files in the repo
 - New script: Zip and install all parkobj files in the repo
+- New object: Base Block (toontowner.scenery_small.xxbbbr01)
 - New object: Sphinx (rct2.scenery_large.sspx)
 - New object: Pyramid (rct2.scenery_large.spyr)
 - New object: Wooden Post Wall (couger.scenery_wall.acwwf32)
